feat: new endpoint to retrieve codes from flights implemented